Pausing MediaRecorder still continues to call ondataavailable at every timeslice event https://bugs.webkit.org/show_bug.cgi?id=261964 rdar://115979604

Reviewed by Eric Carlson.

Before the patch, we were firing dataavailable events with zero data in case recorder is using timeSlice but is paused.
We are now stopping the timer to stop fetching data when pausing.
When resuming, we restart the timer with the delay left at pause time.

* LayoutTests/http/wpt/mediarecorder/pause-recording-timeSlice-expected.txt: Added.
* LayoutTests/http/wpt/mediarecorder/pause-recording-timeSlice.html: Added.
* Source/WebCore/Modules/mediarecorder/MediaRecorder.cpp:
(WebCore::MediaRecorder::requestData):
(WebCore::MediaRecorder::pauseRecording):
(WebCore::MediaRecorder::resumeRecording):
* Source/WebCore/Modules/mediarecorder/MediaRecorder.h:

Canonical link: https://commits.webkit.org/268433@main